@@ -1,4 +1,6 @@
 9 Jul 2018
+fix: uptime time display
+fix: mybonus.php sort order
 fix: crazyhour global message
 
 8 Jul 2018
